--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <h1>Using a Sony Bluray Player</h1>
 <h2>Sony UBX-300 Instructional Manual</h2>
-<img src="images/SonyInstructionManual.jpg" alt="profile photo" width ="300" height="300">
+<img src="SonyInstructionManual.jpg" alt="Image of Manual" width ="300" height="300">
 
 <h3>Compatibility</h3>
 <ul>
